--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
 
     box-sizing: border-box;
   }
+  :root{
+    --headercolor: #19a28e;
+    --stripcolor: #353535;
+    --blue : rgb(42, 42, 100);
+    --red: rgb(235, 122, 122);
+    --brown:  rgb(108, 61, 61);
+  }
 
   body {
     font-family: "Niramit", sans-serif;
@@ -110,8 +117,6 @@
   }
 
   .arrow1 {
-    /* border: white 1px solid; */
-    /* border-radius: 3px; */
     padding-top: 6px;
     cursor: pointer;
     transition: color 0.2s ease-in-out, transform 0.4s ease-in-out;
@@ -297,6 +302,7 @@
     color:rgb(57, 57, 247);
     background-color: white;
     cursor: pointer;
+    transition: 0.3s;
   }
   .back
   {
@@ -305,13 +311,14 @@
   .back:hover{
     color:rgb(140, 137, 137);
     cursor: pointer;
+    transition: 0.3s;
   }
 
   .header {
     margin-top: 2%;
     width: 100%;
     height: 15%;
-    background-color: #19a28e;
+    background-color: var(--headercolor);
   }
 
   .name {
@@ -323,7 +330,7 @@
   }
 
   .strip {
-    background-color: #353535;
+    background-color: var(--stripcolor) ;
     height: 100%;
     width: 35%;
   }
@@ -331,7 +338,6 @@
   .image {
     width: 60%;
     aspect-ratio: 1;
-     /* background-color: rgb(255, 255, 255);  */
     margin: auto;
     border-radius: 100%;
     margin-top: 12%;
@@ -377,7 +383,7 @@
     font-family: "Genos", sans-serif;
     font-size: 18px;
     padding: 2px 4px;
-    background-color: #19a28e;
+    background-color: var(--headercolor);
     border-radius: 3px;
     color: white;
     margin-bottom: 10px;
@@ -426,4 +432,41 @@
     text-decoration: none;
     text-transform: lowercase;
     cursor: pointer;
+  }
+
+  .blue_button
+  {
+    background-color: var(--blue);
+    color: var(--blue);
+    
+  }
+  .c_themes
+  {
+    padding: 6px 4px;
+    border: 2px solid;
+    border-radius: 100%;
+    border-color: white;
+    aspect-ratio: 1;
+    margin: 2px 6px;
+    cursor: pointer;
+  }
+  .c_themes:hover
+  {
+    padding: 8px 6px;
+    transition: 0.3s;
+  }
+  .red_button
+  {
+    background-color: var(--red);
+    color:var(--red);
+  }
+  .green_button
+  {
+    background-color:var(--headercolor);
+    color: var(--headercolor);
+  }
+  .brown_button
+  {
+    background-color: var(--brown);
+    color: var(--brown);
   }
