--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
     text-align: center;
     font-size: 3rem;
     padding: 10px;
-    font-family: "Rampart One", cursive;
+    font-family: 'Rampart One', cursive;
     color: rgb(85, 9, 126);
   }
 
@@ -43,6 +43,7 @@
     color: white;
     overflow-y: auto;
     max-height: 32rem;
+   
   }
   .box1::-webkit-scrollbar {
     display: none;
@@ -57,6 +58,11 @@
     color: white;
     max-height: 32rem;
     overflow-y: auto;
+    
+  }
+  .box2::-webkit-scrollbar
+  {
+    display: none;
   }
 
   .form1 {
@@ -470,3 +476,27 @@
     background-color: var(--brown);
     color: var(--brown);
   }
+
+  /* responsiveness */
+  @media screen and (max-width: 1090px)
+  {
+    .box{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .box2, .box1{
+      max-height: 40rem;
+    }
+    .box1{
+      width: 35rem;
+    }
+    
+    .box2{
+      margin-top: 6%;
+      width: 35rem;
+      margin-left: 0px;
+    }
+  }
+  
