--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
   :root{
     --headercolor: #19a28e;
     --stripcolor: #353535;
-    --blue : rgb(42, 42, 100);
-    --red: rgb(235, 122, 122);
-    --brown:  rgb(108, 61, 61);
+    --blue : #2a2a64;
+    --red: #eb7a7a;
+    --brown:  #6c3d3d;
   }
 
   body {
@@ -254,6 +254,10 @@
     aspect-ratio: 1;
     width: 100px;
   }
+  #user_email
+  {
+    text-transform: lowercase;
+  }
 
   /* Resume style */
   .bg {
@@ -298,14 +302,15 @@
   .download
   {
     font-family: "Nokora", sans-serif;
-    background-color: rgb(57, 57, 247);
+    background-color: rgb(36, 36, 209);
     color: white;
     font-size: 18px;
     padding: 5px 40px;
     border-radius: 5px;
+    border: 0px;
   }
   .download:hover{
-    color:rgb(57, 57, 247);
+    color:rgb(36, 36, 209);
     background-color: white;
     cursor: pointer;
     transition: 0.3s;
@@ -329,7 +334,7 @@
 
   .name {
     padding-top: 4%;
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     color: white;
     margin-left: 20px;
     font-weight: bold;
@@ -455,6 +460,7 @@
     aspect-ratio: 1;
     margin: 2px 6px;
     cursor: pointer;
+    user-select: none;
   }
   .c_themes:hover
   {
